# cashboxAPI

./: alembic.ini  pyproject.toml
app/: ioc.py  main.py
app/application/: mediator.py
app/application/commands/: base.py  category.py  product.py
app/application/exceptions/: category.py  mediator.py  product.py
app/application/handlers/commands/: base.py  category.py  product.py
app/application/handlers/events/: base.py
app/application/interfaces/repositories/: category.py  product.py
app/application/interfaces/repository/: category.py
app/domain/entities/: base.py  cart.py  category.py  product.py  product_on_cart.py
app/domain/events/: base.py
app/domain/exceptions/: base.py
app/domain/exceptions/entities/: cart.py  category.py  product.py
app/domain/exceptions/values/: base.py  numbers.py  texts.py
app/domain/values/: base.py  numbers.py  texts.py
app/infrastruction/db/migrations/: env.py
app/infrastruction/db/migrations/versions/: 359c476146a3_21_52_10_04_2025.py  ed3268d72a22_17_21_09_04_2025.py  fcf3be168450_17_21_09_04_2025.py
app/infrastruction/db/models/: base.py  category.py  product.py
app/infrastruction/db/repositories/: category.py  product.py
app/presentation/commons/: response.py
app/presentation/handlers/: category.py  product.py
app/presentation/schemas/: category.py  product.py
test/: conftest.py
test/application/: conftest.py
test/domain/entities/: test_product.py
test/domain/values/: test_name.py  test_not_negative_int.py  test_price.py  test_text.py
